# CCwhere

./: .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml
ccwhere/: __init__.py  __main__.py  db.py  ingest.py  live.py  queries.py  scan.py  server.py  sync.py
ccwhere/ui/: app.js  consumption.js  filters.js  index.html  ledger.js  live.js  performance.js  tokens.css
docs/adr/: 0001-on-demand-process-not-daemon.md
documentation/: architecture.md  flows.md  permissions.md  variables.md
openspec/specs/consumption-tab/: spec.md
openspec/specs/context-ledger-tab/: spec.md
openspec/specs/dashboard-shell/: spec.md
openspec/specs/event-store/: spec.md
openspec/specs/http-server/: spec.md
openspec/specs/jsonl-ingest/: spec.md
openspec/specs/live-view/: spec.md
openspec/specs/performance-tab/: spec.md
tests/: test_ingest.py  test_live.py  test_queries.py  test_scan.py  test_server.py
